[package]
name = "cmdstruct"
authors = ["Jeff Caffrey-Hill <jeff@caffreyhill.com>"]
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ReverentEngineer/cmdstruct"
documentation = "https://docs.rs/cmdstruct"
description = """
A lightweight macro for implementing commands with a struct
"""
keywords = ["macros", "command", "subprocess", "process"]

[workspace]
members = ["macros"]

[dependencies]
cmdstruct-macros = { version = "1.1.0", path = "macros" }
