[package]
name = "cmdstruct-macros"
authors = ["Jeff Caffrey-Hill <jeff@caffreyhill.com>"]
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ReverentEngineer/cmdstruct"
documentation = "https://docs.rs/cmdstruct"
description = """
A lightweight macro for implementing commands with a struct.
"""
keywords = ["macros", "command", "subprocess", "process"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
